--- a/seizouqr.html
+++ b/seizouqr.html
@@ -2,13 +2,17 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8" />
-<title>1対N QR照合システム（ライン対応）</title>
+<title>1対N QR照合システム（ライン対応・タブレット対策）</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="format-detection" content="telephone=no" />
 <style>
   :root { --ok:#1a7f37; --ng:#d1242f; --fg:#222; --muted:#666; --border:#e5e7eb; --primary:#0b3b75; }
   * { box-sizing: border-box; }
-  body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans JP", sans-serif; color:var(--fg); margin:0; background:#f7f7f8; }
-  header { background:#fff; border-bottom:1px solid var(--border); padding:12px 16px; position:sticky; top:0; z-index:10; display:flex; align-items:center; gap:12px; flex-wrap:wrap; }
+  html, body { height:100%; }
+  body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans JP", sans-serif; color:var(--fg); margin:0; background:#f7f7f8;
+         -webkit-touch-callout:none; -webkit-user-select:none; user-select:none; }
+  header { background:#fff; border-bottom:1px solid var(--border); padding:12px 16px; position:sticky; top:0; z-index:10; display:flex; align-items:center; gap:12px; flex-wrap:wrap;
+           -webkit-tap-highlight-color: transparent; }
   h1 { margin:0; font-size:20px;}
   .sub { color:var(--muted); font-size:13px; }
   main { max-width: 1100px; margin: 16px auto; padding: 0 16px 40px; }
@@ -29,7 +33,8 @@
   .ok { color: var(--ok); }
   .ng { color: var(--ng); }
   .lock { display:none; margin-top:10px; color: var(--ng); font-weight:700; }
-  .btn { padding:10px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; cursor:pointer; font-size:14px; transition:opacity .15s ease; }
+  .btn { padding:10px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; cursor:pointer; font-size:14px; transition:opacity .15s ease;
+         -webkit-tap-highlight-color: transparent; }
   .btn.warn { background:#fef3f2; color:#b42318; border-color:#fecdcf; }
   .btn.big { font-size:18px; padding:16px 22px; border-width:2px; }
   .btn.big.primary { background:#0b3b75; color:#fff; border-color:#0b3b75; }
@@ -39,20 +44,22 @@
   .small { font-size:12px; color:#6b7280; }
   footer { text-align:center; color:#9ca3af; font-size:12px; padding: 16px 0; }
   input[type="file"]{ display:none; }
-  .toolBtn { padding:6px 10px; border-radius:10px; border:1px solid #d1d5db; background:#fff; cursor:pointer; font-size:13px; }
+  .toolBtn { padding:6px 10px; border-radius:10px; border:1px solid #d1d5db; background:#fff; cursor:pointer; font-size:13px; -webkit-tap-highlight-color: transparent; }
   .badge { font-size:12px; padding:3px 8px; border-radius:999px; border:1px solid #d1d5db; }
-  #scanInput { position:absolute; left:-9999px; width:1px; height:1px; opacity:0; }
   /* ライン入力UI */
   .lineWrap { display:flex; gap:8px; align-items:center; border:1px solid var(--border); border-radius:10px; padding:6px 8px; background:#fff; }
   #lineInput { border:none; outline:none; font-size:14px; min-width:140px; }
   #lineSave { border:1px solid var(--border); border-radius:8px; padding:6px 10px; background:#0b3b75; color:#fff; }
   #lineBadge { font-size:12px; padding:3px 8px; border-radius:999px; border:1px solid #cbd5e1; background:#eff6ff; color:#0b3b75; }
+  /* スキャン用の隠し入力（*絶対にフォーカスしない*） */
+  #scanInput { position:absolute; left:-9999px; top:-9999px; width:1px; height:1px; opacity:0;
+               pointer-events:none; }
 </style>
 </head>
 <body>
 <header>
   <h1>QR照合システム（1対N）</h1>
-  <div class="sub">スキャナはキーボード入力（末尾Enter/Tab）</div>
+  <div class="sub">スキャナはキーボード入力（末尾Enter/Tab/Idle）</div>
   <div class="rightTools">
     <div class="lineWrap">
       <span class="small">生産ライン</span>
@@ -67,8 +74,12 @@
   </div>
 </header>
 
-<!-- 常時フォーカス対象 -->
-<input id="scanInput" type="text" autocomplete="off" aria-hidden="true" />
+<!-- 注意：この入力は OS のオートフィルを避けるため *表示もフォーカスもしません* -->
+<input id="scanInput" type="text"
+  readonly inputmode="none"
+  autocomplete="off" autocapitalize="off" autocorrect="off" spellcheck="false"
+  aria-hidden="true"
+/>
 
 <main>
   <section class="card">
@@ -76,7 +87,6 @@
 
     <div class="baseWrap">
       <div class="baseBox">
-        <!-- ステータスはチップのみ（重複回避） -->
         <div class="baseHeading"><span id="prodState" class="statusChip">未開始</span></div>
         <div id="baseDisplay" class="baseValue placeholder">未設定</div>
       </div>
@@ -130,51 +140,25 @@ const $baseDisplay = document.getElementById("baseDisplay");
 const $productImage = document.getElementById("productImage");
 const $imgHint = document.getElementById("imgHint");
 const $prodState = document.getElementById("prodState");
-const $scanInput = document.getElementById("scanInput");
 const $resetBtn = document.getElementById("resetBtn");
 const $lineInput = document.getElementById("lineInput");
 const $lineSave = document.getElementById("lineSave");
 const $lineBadge = document.getElementById("lineBadge");
 
-/* ------------------ フォーカス（常時維持。値は消さない） ------------------ */
-function focusScanField(){
-  if (document.activeElement !== $scanInput){
-    $scanInput.focus({ preventScroll: true });
-  }
-}
+/* ------------------ 初期化 ------------------ */
 window.addEventListener("load", () => {
-  // 初期ライン表示
-  if (lineName) {
-    $lineInput.value = lineName;
-    $lineBadge.textContent = lineName;
-  } else {
-    $lineBadge.textContent = "未設定";
-  }
-  focusScanField();
+  if (lineName) { $lineInput.value = lineName; $lineBadge.textContent = lineName; }
+  else { $lineBadge.textContent = "未設定"; }
 });
-window.addEventListener("focus", focusScanField);
-document.addEventListener("visibilitychange", () => setTimeout(focusScanField, 50));
-document.addEventListener("click", (e) => {
-  // ライン入力と保存ボタン以外のクリックはスキャンに戻す
-  if (!e.target.closest(".lineWrap")) {
-    setTimeout(focusScanField, 0);
-  }
-}, true);
-document.addEventListener("touchend", () => setTimeout(focusScanField, 0), true);
-setInterval(focusScanField, 1000);
 
 /* ------------------ ライン保存 ------------------ */
 function saveLine(){
   lineName = ($lineInput.value || "").trim();
   localStorage.setItem(LINE_KEY, lineName);
   $lineBadge.textContent = lineName || "未設定";
-  // すぐスキャンへ戻す
-  focusScanField();
 }
 $lineSave.addEventListener("click", saveLine);
-$lineInput.addEventListener("keydown", (e) => {
-  if (e.key === "Enter") { e.preventDefault(); saveLine(); }
-});
+$lineInput.addEventListener("keydown", (e) => { if (e.key === "Enter") { e.preventDefault(); saveLine(); } });
 
 /* ------------------ ユーティリティ ------------------ */
 function nowString(){
@@ -189,7 +173,7 @@ function clearMarks(){ $ok.style.display="none"; $ng.style.display="none"; }
 function setLock(state){
   isLocked=state;
   $lockMsg.style.display=state?"block":"none";
-  $resetBtn.disabled = state;              // NGロック中は「製品切替え」不可
+  $resetBtn.disabled = state; // NGロック中は切替不可
   if(!state) clearMarks();
 }
 function updateBaseDisplay(val){ if(val){ $baseDisplay.classList.remove("placeholder"); $baseDisplay.textContent=val; } else { $baseDisplay.classList.add("placeholder"); $baseDisplay.textContent="未設定"; } }
@@ -225,33 +209,31 @@ async function findImageURLByBase(base){
 }
 function showImage(url){ if (url){ $productImage.src=url; $productImage.style.display="block"; $imgHint.style.display="none"; } }
 
-/* ------------------ スキャン文字列構築（Enter/Tab or Idleで確定） ------------------ */
+/* ------------------ スキャナ入力：documentレベルで受ける（Enter/Tab/Idle） ------------------ */
+let buffer = "";
 let idleTimer = null;
-const IDLE_MS = 120; // スキャナは高速入力なので短めの無入力で確定
-
-$scanInput.addEventListener("keydown", e => {
-  if (e.key === "Enter" || e.key === "Tab"){
-    e.preventDefault();
-    let raw = $scanInput.value;
-    raw = raw.replace(/\r/g,"");
-    const parts = raw.split("\n").map(s=>s.trim()).filter(Boolean);
-    const qr = parts.length ? parts[parts.length-1] : raw.trim();
-    $scanInput.value = "";
-    if (qr.length > 0) processQR(qr);
+const IDLE_MS = 120;
+function flushBuffer(){
+  if (!buffer) return;
+  const qr = buffer.replace(/\r/g,"").split("\n").map(s=>s.trim()).filter(Boolean).slice(-1)[0] || "";
+  buffer = "";
+  if (qr.length > 0) processQR(qr);
+}
+document.addEventListener("keydown", (e) => {
+  // すべてのキーで既定動作を抑制して、OSのオートフィル/支払いバーを出さない
+  e.preventDefault();
+  const k = e.key;
+  if (k === "Enter" || k === "Tab") { flushBuffer(); return; }
+  if (k.length === 1) {
+    buffer += k;
+    if (idleTimer) clearTimeout(idleTimer);
+    idleTimer = setTimeout(() => flushBuffer(), IDLE_MS);
+  } else if (k === "Backspace") {
+    buffer = buffer.slice(0, -1);
   }
-});
+}, { passive:false });
 
-$scanInput.addEventListener("input", () => {
-  if (idleTimer) clearTimeout(idleTimer);
-  idleTimer = setTimeout(() => {
-    const s = $scanInput.value.trim();
-    if (s.length > 0) {
-      $scanInput.value = "";
-      processQR(s);
-    }
-  }, IDLE_MS);
-});
-
+/* ------------------ 照合フロー ------------------ */
 async function processQR(qrRaw){
   const now=nowString();
   const sliced=cutQR(qrRaw);
@@ -270,7 +252,6 @@ async function processQR(qrRaw){
     }catch(e){ console.warn(e); }
 
     logRow([now, qrRaw, sliced, "SET_BASE", isLocked?"LOCKED":"UNLOCK", imgName, lineName]);
-    focusScanField();
     return;
   }
 
@@ -282,13 +263,12 @@ async function processQR(qrRaw){
     } else {
       showNGPersistent(); logRow([now, qrRaw, sliced, "LOCK_REJECT", "LOCKED", "", lineName]);
     }
-    focusScanField(); return;
+    return;
   }
 
   const judgedOK = (sliced===baseQR);
   if (judgedOK){ showOK(); logRow([now, qrRaw, sliced, "OK", "UNLOCK", "", lineName]); }
   else { showNGPersistent(); setLock(true); $mode.textContent="NG！管理者QRを読み込んでください"; logRow([now, qrRaw, sliced, "NG", "LOCKED", "", lineName]); }
-  focusScanField();
 }
 
 /* ------------------ ボタン ------------------ */
@@ -296,7 +276,6 @@ document.getElementById("resetBtn").addEventListener("click", () => {
   if (isLocked){
     $mode.textContent = "NGロック中は切替できません。管理者QRで解除してください。";
     logRow([nowString(), "-", "-", "RESET_DENIED_WHEN_LOCKED", "LOCKED", "", lineName]);
-    focusScanField();
     return;
   }
   baseQR=null; setLock(false); clearMarks(); updateBaseDisplay(null);
@@ -304,17 +283,15 @@ document.getElementById("resetBtn").addEventListener("click", () => {
   $productImage.style.display="none"; $imgHint.style.display="block"; $imgHint.textContent="画像フォルダを選択すると表示されます";
   $mode.textContent="基準QRを読み込んでください";
   logRow([nowString(), "-", "-", "RESET", "UNLOCK", "", lineName]);
-  focusScanField();
 });
-document.getElementById("saveBtn").addEventListener("click", () => { downloadCSV(logData); focusScanField(); });
+document.getElementById("saveBtn").addEventListener("click", () => { downloadCSV(logData); });
 document.getElementById("exitBtn").addEventListener("click", () => { downloadCSV(logData,"qr_log"); window.close(); });
-document.getElementById("pickDirBtn").addEventListener("click", () => { pickImageDirectory(); setTimeout(focusScanField,100); });
+document.getElementById("pickDirBtn").addEventListener("click", () => { pickImageDirectory(); });
 document.getElementById("folderInput").addEventListener("change", e => {
   imageMap.clear();
   const files=Array.from(e.target.files||[]);
   for (const f of files){ imageMap.set(f.name, URL.createObjectURL(f)); }
   $imgHint.textContent="画像を読み込み済み：基準値と同名の画像を表示します";
-  setTimeout(focusScanField, 50);
 });
 
 </script>
