--- a/seizouqr.html
+++ b/seizouqr.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8" />
-<title>1対N QR照合システム（ライン対応・タブレット対策）</title>
+<title>1対N QR照合システム（ライン選択・タブレット対策）</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="format-detection" content="telephone=no" />
 <style>
@@ -46,10 +46,9 @@
   input[type="file"]{ display:none; }
   .toolBtn { padding:6px 10px; border-radius:10px; border:1px solid #d1d5db; background:#fff; cursor:pointer; font-size:13px; -webkit-tap-highlight-color: transparent; }
   .badge { font-size:12px; padding:3px 8px; border-radius:999px; border:1px solid #d1d5db; }
-  /* ライン入力UI */
+  /* ライン選択UI */
   .lineWrap { display:flex; gap:8px; align-items:center; border:1px solid var(--border); border-radius:10px; padding:6px 8px; background:#fff; }
-  #lineInput { border:none; outline:none; font-size:14px; min-width:140px; }
-  #lineSave { border:1px solid var(--border); border-radius:8px; padding:6px 10px; background:#0b3b75; color:#fff; }
+  #lineSelect { border:none; outline:none; font-size:14px; min-width:180px; background:#fff; }
   #lineBadge { font-size:12px; padding:3px 8px; border-radius:999px; border:1px solid #cbd5e1; background:#eff6ff; color:#0b3b75; }
   /* スキャン用の隠し入力（*絶対にフォーカスしない*） */
   #scanInput { position:absolute; left:-9999px; top:-9999px; width:1px; height:1px; opacity:0;
@@ -63,8 +62,45 @@
   <div class="rightTools">
     <div class="lineWrap">
       <span class="small">生産ライン</span>
-      <input id="lineInput" type="text" placeholder="例：A1 / 第1ライン" autocomplete="off" />
-      <button id="lineSave" tabindex="-1" title="保存して以降も維持">保存</button>
+      <select id="lineSelect">
+        <option value="">未設定</option>
+        <option>53-300</option>
+        <option>57-200</option>
+        <option>65-300</option>
+        <option>71-300</option>
+        <option>72-160</option>
+        <option>83-500</option>
+        <option>89-400</option>
+        <option>90-600</option>
+        <option>94-300</option>
+        <option>RL5</option>
+        <option>TPS03-3.5</option>
+        <option>あきひと</option>
+        <option>キャップ６号機</option>
+        <option>キャップ７号機</option>
+        <option>30-060</option>
+        <option>41-200</option>
+        <option>42-250</option>
+        <option>49-060</option>
+        <option>51-110</option>
+        <option>54-160</option>
+        <option>70-080</option>
+        <option>76-060</option>
+        <option>78-060</option>
+        <option>82-045</option>
+        <option>87-400</option>
+        <option>88-400</option>
+        <option>91-200</option>
+        <option>RL1</option>
+        <option>RL3</option>
+        <option>RL4</option>
+        <option>RMI-1(インサート成型機）</option>
+        <option>TPS01-2.7</option>
+        <option>TPS02-0.75</option>
+        <option>キャップ10号機</option>
+        <option>キャップ８号機</option>
+        <option>キャップ9号機</option>
+      </select>
       <span id="lineBadge" title="現在のライン">未設定</span>
     </div>
     <span id="firebaseStatus" class="badge" style="color:#9ca3af;">Firebase: 未接続</span>
@@ -141,24 +177,23 @@ const $productImage = document.getElementById("productImage");
 const $imgHint = document.getElementById("imgHint");
 const $prodState = document.getElementById("prodState");
 const $resetBtn = document.getElementById("resetBtn");
-const $lineInput = document.getElementById("lineInput");
-const $lineSave = document.getElementById("lineSave");
+const $lineSelect = document.getElementById("lineSelect");
 const $lineBadge = document.getElementById("lineBadge");
 
-/* ------------------ 初期化 ------------------ */
+/* ------------------ 初期化：ライン反映 ------------------ */
 window.addEventListener("load", () => {
-  if (lineName) { $lineInput.value = lineName; $lineBadge.textContent = lineName; }
-  else { $lineBadge.textContent = "未設定"; }
+  if (lineName) {
+    Array.from($lineSelect.options).forEach(o => { if (o.value === lineName) o.selected = true; });
+    $lineBadge.textContent = lineName;
+  } else {
+    $lineBadge.textContent = "未設定";
+  }
 });
-
-/* ------------------ ライン保存 ------------------ */
-function saveLine(){
-  lineName = ($lineInput.value || "").trim();
+$lineSelect.addEventListener("change", () => {
+  lineName = $lineSelect.value;
   localStorage.setItem(LINE_KEY, lineName);
   $lineBadge.textContent = lineName || "未設定";
-}
-$lineSave.addEventListener("click", saveLine);
-$lineInput.addEventListener("keydown", (e) => { if (e.key === "Enter") { e.preventDefault(); saveLine(); } });
+});
 
 /* ------------------ ユーティリティ ------------------ */
 function nowString(){
