--- a/seizouqr.html
+++ b/seizouqr.html
@@ -46,10 +46,17 @@
   input[type="file"]{ display:none; }
   .toolBtn { padding:6px 10px; border-radius:10px; border:1px solid #d1d5db; background:#fff; cursor:pointer; font-size:13px; -webkit-tap-highlight-color: transparent; }
   .badge { font-size:12px; padding:3px 8px; border-radius:999px; border:1px solid #d1d5db; }
+
   /* ライン選択UI */
   .lineWrap { display:flex; gap:8px; align-items:center; border:1px solid var(--border); border-radius:10px; padding:6px 8px; background:#fff; }
   #lineSelect { border:none; outline:none; font-size:14px; min-width:180px; background:#fff; }
   #lineBadge { font-size:12px; padding:3px 8px; border-radius:999px; border:1px solid #cbd5e1; background:#eff6ff; color:#0b3b75; }
+
+  /* 部署選択UI */
+  .bushoWrap { display: flex; gap: 8px; align-items: center; border: 1px solid var(--border); border-radius: 10px; padding: 6px 8px; background: #fff;}
+  #bushoSelect { border: none; outline: none; font-size: 14px; min-width: 80px; background: #fff;}
+  #bushoBadge { font-size:12px; padding:3px 8px; border-radius:999px; border:1px solid #cbd5e1; background:#ffe; color:#92400e; }
+
   /* スキャン用の隠し入力（*絶対にフォーカスしない*） */
   #scanInput { position:absolute; left:-9999px; top:-9999px; width:1px; height:1px; opacity:0;
                pointer-events:none; }
@@ -60,6 +67,19 @@
   <h1>QR照合システム（1対N）</h1>
   <div class="sub">スキャナはキーボード入力（末尾Enter/Tab/Idle）</div>
   <div class="rightTools">
+    <div class="bushoWrap">
+      <span class="small">部署</span>
+      <select id="bushoSelect">
+        <option value="">未設定</option>
+        <option>1G</option>
+        <option>3G</option>
+        <option>4G</option>
+        <option>5G</option>
+        <option>6G</option>
+        <option>品質</option>
+      </select>
+      <span id="bushoBadge" title="現在の部署">未設定</span>
+    </div>
     <div class="lineWrap">
       <span class="small">生産ライン</span>
       <select id="lineSelect">
@@ -158,14 +178,16 @@ const CUT_START = 3;
 const CUT_LENGTH = 5;
 const ADMIN_QR = "ADMIN123";
 const LINE_KEY = "qr_line_name";
+const BUSHO_KEY = "qr_busho_name";
 
 /* ------------------ 状態 ------------------ */
 let baseQR = null;
 let isLocked = false;
-let logData = [["時刻","読み込んだQR","切り出し後値","判定","ロック状態","画像ファイル","ライン"]];
+let logData = [["時刻","読み込んだQR","切り出し後値","判定","ロック状態","画像ファイル","ライン","部署"]];
 let imageDirHandle = null;
 const imageMap = new Map();
 let lineName = localStorage.getItem(LINE_KEY) || "";
+let bushoName = localStorage.getItem(BUSHO_KEY) || "";
 
 /* ------------------ 要素参照 ------------------ */
 const $mode = document.getElementById("mode");
@@ -179,20 +201,35 @@ const $prodState = document.getElementById("prodState");
 const $resetBtn = document.getElementById("resetBtn");
 const $lineSelect = document.getElementById("lineSelect");
 const $lineBadge = document.getElementById("lineBadge");
+const $bushoSelect = document.getElementById("bushoSelect");
+const $bushoBadge = document.getElementById("bushoBadge");
 
-/* ------------------ 初期化：ライン反映 ------------------ */
+/* ------------------ 初期化：ライン・部署反映 ------------------ */
 window.addEventListener("load", () => {
+  // ライン初期値
   if (lineName) {
     Array.from($lineSelect.options).forEach(o => { if (o.value === lineName) o.selected = true; });
     $lineBadge.textContent = lineName;
   } else {
     $lineBadge.textContent = "未設定";
   }
+  // 部署初期値
+  if (bushoName) {
+    Array.from($bushoSelect.options).forEach(o => { if (o.value === bushoName) o.selected = true; });
+    $bushoBadge.textContent = bushoName;
+  } else {
+    $bushoBadge.textContent = "未設定";
+  }
 });
 $lineSelect.addEventListener("change", () => {
   lineName = $lineSelect.value;
   localStorage.setItem(LINE_KEY, lineName);
   $lineBadge.textContent = lineName || "未設定";
+});
+$bushoSelect.addEventListener("change", () => {
+  bushoName = $bushoSelect.value;
+  localStorage.setItem(BUSHO_KEY, bushoName);
+  $bushoBadge.textContent = bushoName || "未設定";
 });
 
 /* ------------------ ユーティリティ ------------------ */
@@ -216,12 +253,12 @@ function setProdStateRunning(){ $prodState.textContent="生産中"; $prodState.s
 function setProdStateSetup(){ $prodState.textContent="未開始"; $prodState.style.background="#f1f5f9"; $prodState.style.borderColor="#cbd5e1"; }
 function csvEscape(field){ const s=String(field??""); return /[\",\n]/.test(s)?`"${s.replace(/\"/g,'\"\"')}"`:s; }
 function buildCSV(rows){ return rows.map(r=>r.map(csvEscape).join(",")).join("\n"); }
-function downloadCSV(rows, baseName="qr_log"){ const ts=new Date(); const pad=n=>String(n).padStart(2,"0"); const name=`${baseName}_${ts.getFullYear()}${pad(ts.getMonth()+1)}${pad(ts.getDate())}_${pad(ts.getHours())}${pad(ts.getMinutes())}${pad(ts.getSeconds())}.csv`; const csv=buildCSV(rows); const blob=new Blob([csv],{type:"text/csv;charset=utf-8"}); const url=URL.createObjectURL(blob); const a=document.createElement("a"); a.href=url; a.download=name; a.click(); URL.revokeObjectURL(url); }
+function downloadCSV(rows, baseName="qr_log"){ const ts=new Date(); const pad=n=>String(n).padStart(2,"0"); const name=`${baseName}_${ts.getFullYear()}${pad(ts.getMonth()+1)}${pad(ts.getDate())}_${pad(ts.getHours())}${pad(ts.getMinutes())}${pad(ts.getSeconds())}.csv`; const blob=new Blob([buildCSV(rows)],{type:"text/csv"}); const a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download=name; a.click(); }
 
 /* ------------------ 画像処理 ------------------ */
 async function pickImageDirectory(){
   if (!window.showDirectoryPicker){ alert("このブラウザはフォルダ選択APIに未対応です。"); return; }
-  try{ imageDirHandle = await window.showDirectoryPicker({id:"qr-image-dir", mode:"read"}); $imgHint.textContent = "フォルダ選択済み：基準値と同名の画像を表示します"; }catch(e){ console.warn(e); }
+  try{ imageDirHandle = await window.showDirectoryPicker({id:"qr-image-dir", mode:"read"}); $imgHint.textContent = "フォルダ選択済み：基準値と同名の画像を表示します"; }catch(e){ /* キャンセル時は何もしない */ }
 }
 async function findImageURLByBase(base){
   if (imageDirHandle){
@@ -286,7 +323,7 @@ async function processQR(qrRaw){
       else { $productImage.style.display="none"; $imgHint.style.display="block"; $imgHint.textContent=`画像未検出：${baseQR}.*`; }
     }catch(e){ console.warn(e); }
 
-    logRow([now, qrRaw, sliced, "SET_BASE", isLocked?"LOCKED":"UNLOCK", imgName, lineName]);
+    logRow([now, qrRaw, sliced, "SET_BASE", isLocked?"LOCKED":"UNLOCK", imgName, lineName, bushoName]);
     return;
   }
 
@@ -294,30 +331,30 @@ async function processQR(qrRaw){
     if (qrRaw===ADMIN_QR){
       setLock(false); showOK();
       $mode.textContent="解除されました。照合を再開します。";
-      logRow([now, qrRaw, sliced, "UNLOCK_BY_ADMIN", "UNLOCK", "", lineName]);
+      logRow([now, qrRaw, sliced, "UNLOCK_BY_ADMIN", "UNLOCK", "", lineName, bushoName]);
     } else {
-      showNGPersistent(); logRow([now, qrRaw, sliced, "LOCK_REJECT", "LOCKED", "", lineName]);
+      showNGPersistent(); logRow([now, qrRaw, sliced, "LOCK_REJECT", "LOCKED", "", lineName, bushoName]);
     }
     return;
   }
 
   const judgedOK = (sliced===baseQR);
-  if (judgedOK){ showOK(); logRow([now, qrRaw, sliced, "OK", "UNLOCK", "", lineName]); }
-  else { showNGPersistent(); setLock(true); $mode.textContent="NG！管理者QRを読み込んでください"; logRow([now, qrRaw, sliced, "NG", "LOCKED", "", lineName]); }
+  if (judgedOK){ showOK(); logRow([now, qrRaw, sliced, "OK", "UNLOCK", "", lineName, bushoName]); }
+  else { showNGPersistent(); setLock(true); $mode.textContent="NG！管理者QRを読み込んでください"; logRow([now, qrRaw, sliced, "NG", "LOCKED", "", lineName, bushoName]); }
 }
 
 /* ------------------ ボタン ------------------ */
 document.getElementById("resetBtn").addEventListener("click", () => {
   if (isLocked){
     $mode.textContent = "NGロック中は切替できません。管理者QRで解除してください。";
-    logRow([nowString(), "-", "-", "RESET_DENIED_WHEN_LOCKED", "LOCKED", "", lineName]);
+    logRow([nowString(), "-", "-", "RESET_DENIED_WHEN_LOCKED", "LOCKED", "", lineName, bushoName]);
     return;
   }
   baseQR=null; setLock(false); clearMarks(); updateBaseDisplay(null);
   setProdStateSetup();
   $productImage.style.display="none"; $imgHint.style.display="block"; $imgHint.textContent="画像フォルダを選択すると表示されます";
   $mode.textContent="基準QRを読み込んでください";
-  logRow([nowString(), "-", "-", "RESET", "UNLOCK", "", lineName]);
+  logRow([nowString(), "-", "-", "RESET", "UNLOCK", "", lineName, bushoName]);
 });
 document.getElementById("saveBtn").addEventListener("click", () => { downloadCSV(logData); });
 document.getElementById("exitBtn").addEventListener("click", () => { downloadCSV(logData,"qr_log"); window.close(); });
@@ -355,13 +392,13 @@ document.getElementById("folderInput").addEventListener("change", e => {
   try { await signInAnonymously(auth); setStatus("接続済み", "#16a34a"); }
   catch(e){ console.warn("匿名認証に失敗:", e); setStatus("未接続（認証エラー）", "#dc2626"); }
 
-  // Firestore へログを保存（CSV互換 + 集計用の明示フィールド + ライン）
+  // Firestore へログを保存（CSV互換 + 集計用の明示フィールド + ライン + 部署）
   window.logRow = async function(row){
     try {
       logData.push(row);
-      const [ts, raw, sliced, judge, lockState, imageFile, line] = row;
+      const [ts, raw, sliced, judge, lockState, imageFile, line, busho] = row;
       await addDoc(collection(db, "qrLogs"), {
-        ts, raw, sliced, judge, lockState, imageFile, line,
+        ts, raw, sliced, judge, lockState, imageFile, line, busho,
         readAt: serverTimestamp(),
         uid: (auth.currentUser && auth.currentUser.uid) || null,
         pageUrl: location.href,
