--- a/jisseki.html
+++ b/jisseki.html
@@ -105,6 +105,18 @@
 <main>
   <section class="panel">
     <div class="filter-grid">
+  <div>
+    <label for="bushoSel">部署</label>
+    <select id="bushoSel">
+      <option value="">すべて</option>
+      <option>1G</option>
+      <option>3G</option>
+      <option>4G</option>
+      <option>5G</option>
+      <option>6G</option>
+      <option>品質</option>
+    </select>
+  </div>
       <div>
         <label for="dateFrom">開始日</label>
         <input id="dateFrom" type="date" />
@@ -730,7 +742,28 @@ function isBaseState(r){
   const hourGroup = document.getElementById("hourGroup");
   const dateFrom = document.getElementById("dateFrom");
   const dateTo = document.getElementById("dateTo");
+const bushoSel = document.getElementById("bushoSel");
 
+function getCurrentFilters() {
+  return {
+    line: lineSel.value,
+    sliced: slicedSel.value,
+    busho: bushoSel.value,  // 追加
+    dateFrom: dateFrom.value,
+    dateTo: dateTo.value,
+    hourGroup: hourGroup.value
+  }
+}
+
+function filterData(allData, filters) {
+  return allData.filter(row => {
+    if (filters.line && row.line !== filters.line) return false;
+    if (filters.sliced && row.sliced !== filters.sliced) return false;
+    if (filters.busho && row.busho !== filters.busho) return false; // 追加
+    // ...既存の期間判定など
+    return true;
+  });
+}
   const app = initializeApp({
     apiKey: "AIzaSyDb62GTdYU_zksCYiQyr9-WERZLFrztJ1U",
     authDomain: "miyama-seizo.firebaseapp.com",
