--- a/jisseki.html
+++ b/jisseki.html
@@ -1367,7 +1367,7 @@ function updateLineSummaryCards(data, stopTimeByLine){
     if(currentProduct){
       statusHtml = `<div class="status-pill status-on">🟢 生産中：<strong>${currentProduct}</strong><span class="time-range">（${fmt(active?.start)}〜現在）</span></div>`;
     }else{
-      statusHtml = `<div class="status-pill status-off">⏹ 生産終了</div>`;
+      statusHtml = `<div class="status-pill status-off">⏹ 停止中</div>`;
     }
 
     // 品番リスト（数量）＋ 終了したセッションの時間帯表示
