--- a/jisseki.html
+++ b/jisseki.html
@@ -5,7 +5,17 @@
 <title>生産実績ダッシュボード</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
-  :root{ --fg:#111; --muted:#6b7280; --border:#e5e7eb; --bg:#f9fafb; --accent:#0369a1; --success:#059669; --danger:#dc2626; --warning:#d97706; }
+:root{
+  --fg:#111;
+  --muted:#4b5563;
+  --border:#cbd5e1;           /* 従来より濃く */
+  --border-strong:#94a3b8;    /* 1.5px 用の強調線 */
+  --bg:#f7fafc;
+  --accent:#0369a1;
+  --success:#059669;
+  --danger:#dc2626;
+  --warning:#d97706;
+}
   *{ box-sizing:border-box; }
   body{ font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans JP", sans-serif; margin:0; color:var(--fg); background:var(--bg); line-height:1.5; }
   header{ background:#fff; border-bottom:2px solid var(--border); padding:16px 24px; display:flex; gap:16px; align-items:center; flex-wrap:wrap; position:sticky; top:0; z-index:10; box-shadow: 0 1px 3px rgba(0,0,0,0.05); }
