--- a/jisseki.html
+++ b/jisseki.html
@@ -97,6 +97,7 @@
   .color-box{ width:20px; height:20px; border-radius:4px; border:1px solid var(--border); }
 .status-pill{display:inline-flex;align-items:center;gap:6px;padding:4px 10px;border-radius:999px;font-size:12px;font-weight:700;border:1px solid var(--border);}
 .status-on{background:#d1fae5;color:var(--success);border-color:#86efac;}
+  .status-stop{background:#fee2e2;color:#dc2626;border-color:#fecaca;}
 .status-off{background:#e5e7eb;color:#374151;border-color:#d1d5db;}
 .time-range{font-size:12px;color:var(--muted);}
 .product-item .time-range{margin-left:8px;}
@@ -723,6 +724,40 @@ function extractState(r){
 function isVerifyingState(r){
   const s = extractState(r);
   return /(照合|verify|verifying|checking|compare|比較)/.test(s);
+}
+  function getCurrentLineStatus(recordsForLine){
+  if (!recordsForLine || recordsForLine.length === 0) return {state:'idle'};
+
+  // 時系列に整列（OKのみの filtered を想定）
+  const list = [...recordsForLine].sort((a,b)=>{
+    const ta = a.ts ? parseClientDate(a.ts) : (a.readAt?.seconds ? new Date(a.readAt.seconds*1000) : null);
+    const tb = b.ts ? parseClientDate(b.ts) : (b.readAt?.seconds ? new Date(b.readAt.seconds*1000) : null);
+    return (ta?.getTime()||0) - (tb?.getTime()||0);
+  });
+
+  const last = list[list.length-1];
+  const last2 = list[list.length-2] || null;
+
+  // 直近イベント時刻
+  let lastTime = null;
+  if (last?.ts) lastTime = parseClientDate(last.ts);
+  else if (last?.readAt?.seconds) lastTime = new Date(last.readAt.seconds*1000);
+  if (!lastTime) return {state:'idle'};
+
+  const now = new Date();
+  const minutesFromLast = (now - lastTime)/60000;
+
+  // 稼働時間外は idle 扱い（必要なら 'stopped' に変更可）
+  if (!isWorkingTime(now)) return {state:'idle'};
+
+  // 15分以上無通過 → 停止中（直近2件で品番が違えば「品番切替」）
+  if (minutesFromLast >= STOP_THRESHOLD_MINUTES) {
+    const reason = (last2 && (last2.sliced||'') !== (last.sliced||'')) ? '品番切替' : '無通過';
+    return {state:'stopped', reason, since:lastTime};
+  }
+
+  // 15分未満 → 生産中
+  return {state:'active', product:(last.sliced||'不明'), since:lastTime};
 }
 function isBaseState(r){
   const s = extractState(r);
@@ -1377,7 +1412,7 @@ function updateLineSummaryCards(data, stopTimeByLine){
   const container = document.getElementById('lineSummaryCards');
   container.innerHTML = '';
 
-  // ライン別集計（既存と同等）
+  // ライン別 生産数量集計
   const lineProducts = {};
   data.forEach(r=>{
     const line = r.line || '不明';
@@ -1387,10 +1422,9 @@ function updateLineSummaryCards(data, stopTimeByLine){
     lineProducts[line][product] += getQuantity(r.sliced);
   });
 
-  // セッション作成（新）
+  // セッション（開始〜終了のまとまり）
   const sessionsByLine = buildLineSessions(data);
 
-  // 表示
   const sortedLines = Object.keys(lineProducts).sort();
   const fmt = (d)=> d ? d.toLocaleString('ja-JP',{hour:'2-digit',minute:'2-digit'}) : '-';
 
@@ -1404,35 +1438,29 @@ function updateLineSummaryCards(data, stopTimeByLine){
 
     const { active, sessions, currentProduct } = sessionsByLine[line] || {active:null, sessions:[], currentProduct:null};
 
- // 先頭：ステータスピル（停止中対応版）
-let statusHtml = '';
-// このラインの filtered データだけ抽出して現在状態を判定
-const lineRows = data.filter(r => (r.line || '不明') === line);
-const lineStatus = getCurrentLineStatus(lineRows);
-const fmt = (d)=> d ? d.toLocaleString('ja-JP',{hour:'2-digit',minute:'2-digit'}) : '-';
+    // ステータスピル（生産中/停止中/生産終了）
+    let statusHtml = '';
+    const lineRows = data.filter(r => (r.line || '不明') === line);
+    const lineStatus = getCurrentLineStatus(lineRows);
 
-if (lineStatus.state === 'active') {
-  const curProd = lineStatus.product || currentProduct || '不明';
-  statusHtml = `<div class="status-pill status-on">🟢 生産中：<strong>${curProd}</strong><span class="time-range">（${fmt(lineStatus.since)}〜現在）</span></div>`;
-} else if (lineStatus.state === 'stopped') {
-  const reason = lineStatus.reason === '品番切替' ? '（品番切替）' : '';
-  statusHtml = `<div class="status-pill status-stop">⛔ 停止中${reason}<span class="time-range">（${fmt(lineStatus.since)}〜現在）</span></div>`;
-} else {
-  statusHtml = `<div class="status-pill status-off">⏹ 生産終了</div>`;
-}
+    if (lineStatus.state === 'active') {
+      const curProd = lineStatus.product || currentProduct || '不明';
+      statusHtml = `<div class="status-pill status-on">🟢 生産中：<strong>${curProd}</strong><span class="time-range">（${fmt(lineStatus.since)}〜現在）</span></div>`;
+    } else if (lineStatus.state === 'stopped') {
+      const reason = lineStatus.reason === '品番切替' ? '（品番切替）' : '';
+      statusHtml = `<div class="status-pill status-stop">⛔ 停止中${reason}<span class="time-range">（${fmt(lineStatus.since)}〜現在）</span></div>`;
+    } else {
+      statusHtml = `<div class="status-pill status-off">⏹ 生産終了</div>`;
+    }
 
-
-    // 品番リスト（数量）＋ 終了したセッションの時間帯表示
+    // 品番ごとの行（時間チップ付き）
     const productRows = Object
       .entries(products)
       .sort((a,b)=>b[1]-a[1])
       .map(([prod, qty])=>{
-        // その品番の直近セッション（終了しているもの）を探す
         const ses = (sessions||[]).filter(s=>s.product===prod);
-        // “現在生産中”の場合は最後のセッションは進行中と見做すので、終了表示は直近で完了済みのものに限定
         const lastFinished = (currentProduct===prod && ses.length>1) ? ses[ses.length-2] : ses[ses.length-1];
-        // 生産中の品番は行に “（開始〜今）” を出す。終了品は “開始〜終了”
-        const timeChip = (currentProduct===prod)
+        const timeChip = (lineStatus.state === 'active' && (lineStatus.product===prod || currentProduct===prod))
           ? `<span class="time-range">（${fmt(active?.start)}〜現在）</span>`
           : (lastFinished ? `<span class="time-range">（${fmt(lastFinished.start)}〜${fmt(lastFinished.end)}）</span>` : '');
         return `
@@ -1454,6 +1482,7 @@ if (lineStatus.state === 'active') {
     container.appendChild(card);
   });
 }
+
   function updateStopDetailTable(stopDetails){
     const tbody = document.getElementById('stopDetailTbody');
     tbody.innerHTML = '';
