--- a/jisseki.html
+++ b/jisseki.html
@@ -1477,7 +1477,7 @@ const lineRows = allData.filter(r => (r.line || '不明') === line);
       const reason = lineStatus.reason === '品番切替' ? '（品番切替）' : '';
       statusHtml = `<div class="status-pill status-stop">⛔ 停止中${reason}<span class="time-range">（${fmt(lineStatus.since)}〜現在）</span></div>`;
     } else {
-      statusHtml = `<div class="status-pill status-off">⏹ 生産終了</div>`;
+      statusHtml = `<div class="status-pill status-off">⏹ 停止中</div>`;
     }
 
     // 品番ごとの行（時間チップ付き）
