--- a/nippoview.html
+++ b/nippoview.html
@@ -429,9 +429,9 @@ function handleCheckChange(checkbox, productCode) {
 
 function initApp() {
   const today = new Date();
-  const firstDay = new Date(today.getFullYear(), today.getMonth(), 1);
-  document.getElementById('filter-start-date').value = firstDay.toISOString().split('T')[0];
-  document.getElementById('filter-end-date').value = today.toISOString().split('T')[0];
+  const todayStr = today.toISOString().split('T')[0];
+  document.getElementById('filter-start-date').value = todayStr;
+  document.getElementById('filter-end-date').value = todayStr;
   
   db.collection('productMaster').onSnapshot(snapshot => {
     master = {};
