--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -739,29 +739,38 @@ function init(){
       updateAllInspectorSelects();
     });
     
-    unsubscribeDaily = db.collection('dailyReports').orderBy('timestamp', 'desc').onSnapshot(snapshot => {
-      data = [];
-      snapshot.forEach(doc => {
-        const d = doc.data();
-        data.push({
-          id: doc.id,
-          pd: d.pd || '',
-          on: d.on || '',
-          pieces: d.pieces || '',
-          boxes: d.boxes || '',
-          remainder: d.remainder || '',
-          ic: d.ic || '0',
-          totalTime: d.totalTime || '0',
-          ln: d.ln || '',
-          it2: d.it2 || '',
-          inspectors: d.inspectors || [],
-          ngMap: d.ngMap ? new Map(Object.entries(d.ngMap)) : new Map(),
-          rm: d.rm || ''
-        });
+// 直近2営業日だけに絞ってリアルタイム購読
+const { start, end } = getLastTwoBusinessDayRange();
+unsubscribeDaily = db.collection('dailyReports')
+  .where('timestamp', '>=', start)
+  .where('timestamp', '<=', end)
+  .orderBy('timestamp', 'desc')
+  .onSnapshot(snapshot => {
+    data = [];
+    snapshot.forEach(doc => {
+      const d = doc.data();
+      data.push({
+        id: doc.id,
+        pd: d.pd || '',
+        on: d.on || '',
+        pieces: d.pieces || '',
+        boxes: d.boxes || '',
+        remainder: d.remainder || '',
+        ic: d.ic || '0',
+        totalTime: d.totalTime || '0',
+        ln: d.ln || '',
+        it2: d.it2 || '',
+        inspectors: d.inspectors || [],
+        ngMap: d.ngMap ? new Map(Object.entries(d.ngMap)) : new Map(),
+        rm: d.rm || ''
       });
-      render();
-      updateCnt();
     });
+    render();
+    updateCnt();
+  }, err => {
+    console.error('購読エラー:', err);
+  });
+
   }
 }
 
